--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,28 +4,28 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "files/**"
+      - "scripts/generate_index.js"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          persist-credentials: false
+          node-version: 20
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
+      - name: Generate index
+        run: node scripts/generate_index.js
 
-      - run: npm install
-      - run: npm run build
-
-      # 使用 GITHUB_TOKEN 提交 index.json
-      - name: Commit index.json
+      - name: Commit index data
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/index.json
-          git commit -m "chore: update index.json [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/
+          git commit -m "chore: update index data [skip ci]" || echo "No changes"
+          git push
