--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,26 +12,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          persist-credentials: false
           ref: main
+          persist-credentials: false
 
-      - uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - run: npm install
-      - run: npm run build
+      - name: Install deps
+        run: npm install
+
+      #在 build 之前 pull
+      - name: Sync with main
+        run: |
+          git pull https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} main
+
+      - name: Build index
+        run: npm run build
 
       - name: Commit index data
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          git pull --rebase https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} main
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git add data/*.json
-          git commit -m "chore: update index data [skip ci]" || echo "No changes to commit"
+          git commit -m "chore: update index data [skip ci]" || exit 0
 
           git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:main
